--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,19 +5,21 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.3.1"
-serde = { version = "1.0", features = ["derive"] }
+serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0"
 log = "0.4"
 env_logger = "0.10"
-chrono = "0.4"
+chrono = {version = "0.4", features = ["serde"]}
 thiserror = "1.0"
 backtrace = "0.3"
-governor = { version = "0.5", features = ["dashmap"] }
+governor = { version = "0.6", features = ["dashmap"] }
 nonzero_ext = "0.3"
 futures = "0.3"
 log4rs = "1.3"
-tokio-postgres = "0.7"
+tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
 deadpool-postgres = "0.10"
-bcrypt = "0.13"
-jsonwebtoken = "8.1"
-config = "0.13"
+bcrypt = "0.15.1"
+jsonwebtoken = "9.3.0"
+config = "0.14.0"
+validator = "0.16"
+postgres-types = { version = "0.2", features = ["derive"] }
