--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ jsonwebtoken = "9.3.0"
 config = "0.14.0"
 validator = "0.16"
 postgres-types = { version = "0.2", features = ["derive"] }
+tokio = { version = "1.0", features = ["full"] }
